[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kra-etims-sdk"
version = "0.1.5"
description = "Python SDK for KRA eTIMS OSCU/VSCU API"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Emmanuel Bartile" }
]
keywords = ["KRA", "eTIMS", "OSCU", "VSCU", "Kenya", "Tax"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]

dependencies = [
  "requests>=2.31.0",
  "pydantic>=2.5"
]

[project.urls]
Homepage = "https://github.com/paybillke/kra-etims-python-sdk"
Issues = "https://github.com/paybillke/kra-etims-python-sdk/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["kra_etims_sdk*"]
